# opamp-fleet

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json
.devcontainer/: devcontainer.json  docker-compose.yml  install-tools.sh
.devcontainer/opamp-agent/: Dockerfile  fallback.yaml  supervisor.yaml
.devcontainer/splunk-collector/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cross-platform-build.yml  docs-check.yml  release.yml
config/: client.toml  collector.yaml  server.toml  supervisors.yaml
config/examples/: fluent-bit-conf.conf  otelcol-conf.yaml  otelcol-plain-conf.yaml
crates/client/: Cargo.toml  build.rs
crates/client/src/: agent.rs  cli.rs  config.rs  connection.rs  engine.rs  main.rs  storage.rs  tls.rs  version.rs
crates/client/src/service/: layout.rs  manager.rs  mod.rs  runtime.rs  windows.rs
crates/client/src/supervisor/: agent.rs  collector.rs  command.rs  endpoint.rs  mod.rs  ports.rs  process.rs
crates/client/src/transport/: http.rs  mod.rs  ws.rs
crates/client/tests/: connection_settings_e2e.rs  e2e.rs  shutdown.rs  supervisor.rs
crates/opamp/: Cargo.toml  build.rs
crates/opamp-proto/: Cargo.toml  build.rs
crates/opamp-proto/src/: frame.rs  lib.rs
crates/opamp-server/: Cargo.toml
crates/opamp-server/src/: api.rs  auth.rs  config.rs  fleet.rs  lib.rs  main.rs  packages.rs  server.rs  ui.rs
crates/opamp-server/templates/: page.html
crates/opamp-server/tests/: fleet_visibility.rs  package_offer.rs
crates/opamp-supervisor/: Cargo.toml
crates/opamp-supervisor/src/: agent.rs  collector.rs  collector_agent.rs  config.rs  download.rs  health.rs  host.rs  lib.rs  local_server.rs  main.rs  ports.rs  process_agent.rs  supervisor.rs  tls.rs  uid.rs
crates/opamp/src/: capabilities.rs  config.rs  frame.rs  instance_uid.rs  lib.rs  transport.rs  uid.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  config.rs  configs.rs  fleet.rs  lib.rs  main.rs  opamp_endpoint.rs  transport.rs
crates/server/static/: index.html
crates/server/tests/: auth.rs  connection_settings.rs  http_transport.rs  rest_api.rs  ws_transport.rs
crates/server/tests/support/: mod.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: cli.rs  client.rs  lib.rs  main.rs  supervisor.rs
crates/supervisor/src/service/: manager.rs  mod.rs  runtime.rs  windows.rs
crates/supervisor/src/update/: health.rs  layout.rs  marker.rs  mod.rs  verify.rs
crates/supervisor/tests/: transport.rs
docs/: CONFORMANCE.md  SPECIFICATION.md
docs/adr/: 0001-agent-governance-model.md  0002-dev-container-runtime.md  0003-client-modes-and-connection-multiplexing.md  0003-compose-dev-environment-with-opamp-sidecars.md  0003-rust-toolchain-and-workspace.md  0004-opamp-wire-contract-and-transport.md  0004-protocol-baseline-and-conformance-tracking.md  0004-rust-toolchain-dev-container.md  0005-cargo-workspace-layout.md  0005-server-runtime-and-rudimentary-ui.md  0005-workspace-and-server-runtime.md  0006-proto-vendoring-and-codegen.md  0006-rust-opamp-server-from-spec.md  0006-supervisor-host-os-service-and-cli.md  0007-dual-transport-and-tls.md  0007-in-place-self-update-with-rollback.md  0007-rest-api-and-fleet-ui.md  0008-collector-supervisor-go-reference-compat.md  0008-release-pipeline-and-versioning.md  0008-toml-configuration.md  0009-native-installer-packages.md  0009-plugin-hexagonal-supervisor-host.md  0009-version-derivation-and-baking.md  0010-client-os-service-and-cli.md  0010-collector-supervisor-own-telemetry.md  0010-msix-channel-os-managed-service-and-updates.md  0011-server-agent-control-beyond-config.md  0011-supervisor-mode-hexagonal-core-and-plugins.md  0012-selector-targeted-configurations-and-openapi-rest-api.md  0012-tls-and-shared-token-auth.md  0013-opamp-endpoint-authentication.md  0013-supervisor-host-health-check-endpoint.md  0014-local-config-files-in-composition.md  0014-server-driven-connection-settings.md  0015-accepts-opamp-connection-settings.md  0016-mtls-client-certificate-issuance.md  0017-other-connection-settings.md  0018-opamp-package-binary-distribution.md  README.md  template.md
packaging/: nfpm.yaml
packaging/wix/: main.wxs
scripts/: check-docs.sh  install_tools.sh  seed_test_configs.sh
