[package]
name = "client"
description = "OpAMP Fleet Client: the process an operator installs to place a machine under management (ADR-0003)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
opamp.workspace = true
tokio.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
