[package]
name = "opamp-supervisor"
description = "The Supervisor Host: hosts the OpAMP-native Collector Supervisor (ADR-0008)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Library + binary, mirroring opamp-server: the OpAMP client loop and config handling live in the
# library so their pure parts can be unit-tested (ADR-0005, ADR-0008).
[lib]
name = "opamp_supervisor"
path = "src/lib.rs"

[[bin]]
name = "opamp-supervisor"
path = "src/main.rs"

[dependencies]
opamp-proto.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
hex.workspace = true

# Sending SIGTERM to a supervised child for graceful shutdown (tokio's Child only exposes SIGKILL).
# Unix-only: Windows has no SIGTERM for another process and falls back to an immediate terminate.
[target.'cfg(unix)'.dependencies]
libc.workspace = true
