[package]
name = "opamp-supervisor"
description = "The Supervisor Host: hosts the OpAMP-native Collector Supervisor (ADR-0008)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Library + binary, mirroring opamp-server: the OpAMP client loop and config handling live in the
# library so their pure parts can be unit-tested (ADR-0005, ADR-0008).
[lib]
name = "opamp_supervisor"
path = "src/lib.rs"

[[bin]]
name = "opamp-supervisor"
path = "src/main.rs"

[dependencies]
opamp-proto.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
hex.workspace = true
# Verifying a downloaded package's content hash (ADR-0018).
sha2.workspace = true
# `wss://` transport and a custom-CA / insecure TLS config for the OpAMP client (ADR-0012).
rustls.workspace = true
rustls-pemfile.workspace = true
# The package-download client (ADR-0018): a raw TLS stream for `https://` downloads, reusing the same
# rustls (ring) stack as the OpAMP client — no separate HTTP-client dependency. `webpki-roots` supplies
# the default trust anchors when no custom CA is configured, matching the `wss://` client's default.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "1"

# Sending SIGTERM to a supervised child for graceful shutdown (tokio's Child only exposes SIGKILL).
# Unix-only: Windows has no SIGTERM for another process and falls back to an immediate terminate.
[target.'cfg(unix)'.dependencies]
libc.workspace = true
