[package]
name = "opamp"
description = "Shared OpAMP wire contract and domain helpers for OpAMP Fleet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
# protox compiles the vendored .proto in pure Rust (no system protoc), producing a
# FileDescriptorSet that prost-build turns into Rust types (ADR-0004).
prost-build = { workspace = true }
protox = { workspace = true }
