[package]
name = "server"
description = "OpAMP Fleet Server: dual-transport OpAMP endpoint, REST API, and bundled UI (ADR-0005, ADR-0007)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
opamp.workspace = true
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
base64.workspace = true
constant_time_eq.workspace = true
rustls.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
tempfile = "3"
