[package]
name = "supervisor"
description = "OpAMP Fleet Supervisor Host — one client process running many Supervisors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "supervisor"
path = "src/lib.rs"

[[bin]]
name = "supervisor-host"
path = "src/main.rs"

[dependencies]
opamp = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
