[package]
name = "supervisor"
description = "OpAMP Fleet Supervisor Host — one client process running many Supervisors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "supervisor"
path = "src/lib.rs"

[[bin]]
name = "supervisor-host"
path = "src/main.rs"

[dependencies]
opamp = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# ADR-0006: subcommand CLI and cross-platform OS-service lifecycle.
clap = { workspace = true }
service-manager = { workspace = true }
# ADR-0007: content-hash verification and the update marker for self-update.
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# ADR-0006: the Windows-only SCM runtime shim (windows-service), so the daemon runs under the
# Service Control Manager. Not compiled on Linux/macOS.
[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }
